result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - name: result-service
      port: 80
      targetPort: 8081
