vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
    - name: vote-service
      port: 80
      targetPort: 8080
